--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-5 col-lg-4 vidplayer">
-            <iframe src="/https://www.youtube-nocookie.com/embed/Oyu9azZg4Ps" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube-nocookie.com/embed/Oyu9azZg4Ps" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 vidinfo">
             <p class="viddesc">
@@ -79,7 +79,7 @@
     <div class="latestupdates">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 col-md-6">
+          <div class="col-xs-12 col-sm-4 col-md-6 vidlist">
             <h2>Latest videos</h2>
             
             <div class="vidblock">
@@ -169,13 +169,14 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-2 col-md-push-5 footerlogo">
-            <p>&nbsp;</p>
           </div>
-          <div class="col-xs-12 col-md-5 col-md-pull-2">
+          <div class="col-xs-12 col-md-5 col-md-pull-2 footerleft">
             <p>Copyright information goes here.</p>
-            <p>Site design and code by <a href="http://joeyfoo.github.io/">Joey Foo</a>. <a href="">Available on GitHub</a>. </p>
+            <p>Site design and code by <a href="http://joeyfoo.github.io/">Joey Foo</a>. <a href="https://github.com/joeyfoo/mindcrack-website-modern">Available on GitHub</a>. </p>
           </div>
-          <div class="col-xs-12 col-md-5">
+          <div class="col-xs-12 col-md-5 footerright">
+            <p>Video content are copyright of their respective contributors.</p>
+            <p>Minecraft and Minecraft artwork copyright Mojang AB. </p>
           </div>
         </div>
       </div>
