--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
     
     <!--Columns!-->
-    <div class="latestupdates">
+    <div class="content">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-4 col-md-6 vidlist">
