Cleaned up memberlist

--- a/members.html
+++ b/members.html
@@ -22,7 +22,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9">
           <ul class="nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#" class="current">Members</a></li>
             <li><a href="#">Chat</a></li>
             <li><a href="#">Map</a></li>
@@ -35,87 +35,85 @@
 
   <div class="memberlist">
     <div class="container">
-      <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8">
-        <h3>Mindcrack Server Members</h3>
-        <div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker adlington">
-            <a href="http://youtube.com/#">Adlington</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker anderzel">
-            <a href="http://youtube.com/#">AnderZEL</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker arkas">
-            <a href="http://youtube.com/#">Arkas</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker avidya">
-            <a href="http://youtube.com/#">Avidya</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker bdoubleo">
-            <a href="http://youtube.com/#">BdoubleO</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker blametc">
-            <a href="http://youtube.com/#">BlameTC</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker docm">
-            <a href="http://youtube.com/#">Docm</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker etho">
-            <a href="http://youtube.com/#">Etho</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker generikb">
-            <a href="http://youtube.com/#">GenerikB</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker guude">
-            <a href="http://youtube.com/#">Guude</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker jsano">
-            <a href="http://youtube.com/#">Jsano</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker kurt">
-            <a href="http://youtube.com/#">Kurt</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker mcgamer">
-            <a href="http://youtube.com/#">MCGamer</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker mhykol">
-            <a href="http://youtube.com/#">Mhykol</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker millbee">
-            <a href="http://youtube.com/#">Millbee</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker nebris">
-            <a href="http://youtube.com/#">Nebris</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker pakratt">
-            <a href="http://youtube.com/#">Pakratt</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker paulsjr">
-            <a href="http://youtube.com/#">PaulSJr</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker pause">
-            <a href="http://youtube.com/#">Pause</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker pyrao">
-            <a href="http://youtube.com/#">Pyrao</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker sethbling">
-            <a href="http://youtube.com/#">SethBling</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker thejims">
-            <a href="http://youtube.com/#">TheJims</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker vechs">
-            <a href="http://youtube.com/#">Vechs</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker vintagebeef">
-            <a href="http://youtube.com/#">VintageBeef</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker w92baj">
-            <a href="http://youtube.com/#">W92Baj</a>
-          </div>
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist mindcracker zisteau">
-            <a href="http://youtube.com/#">Zisteau</a>
-          </div>
+      <h3>Mindcrack Server Members</h3>
+      <div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker adlington">
+          <a href="http://youtube.com/#">Adlington</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker anderzel">
+          <a href="http://youtube.com/#">AnderZEL</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker arkas">
+          <a href="http://youtube.com/#">Arkas</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker avidya">
+          <a href="http://youtube.com/#">Avidya</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker bdoubleo">
+          <a href="http://youtube.com/#">BdoubleO</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker blametc">
+          <a href="http://youtube.com/#">BlameTC</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker docm">
+          <a href="http://youtube.com/#">Docm</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker etho">
+          <a href="http://youtube.com/#">Etho</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker generikb">
+          <a href="http://youtube.com/#">GenerikB</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker guude">
+          <a href="http://youtube.com/#">Guude</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker jsano">
+          <a href="http://youtube.com/#">Jsano</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker kurt">
+          <a href="http://youtube.com/#">Kurt</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker mcgamer">
+          <a href="http://youtube.com/#">MCGamer</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker mhykol">
+          <a href="http://youtube.com/#">Mhykol</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker millbee">
+          <a href="http://youtube.com/#">Millbee</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker nebris">
+          <a href="http://youtube.com/#">Nebris</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker pakratt">
+          <a href="http://youtube.com/#">Pakratt</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker paulsjr">
+          <a href="http://youtube.com/#">PaulSJr</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker pause">
+          <a href="http://youtube.com/#">Pause</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker pyrao">
+          <a href="http://youtube.com/#">Pyrao</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker sethbling">
+          <a href="http://youtube.com/#">SethBling</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker thejims">
+          <a href="http://youtube.com/#">TheJims</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker vechs">
+          <a href="http://youtube.com/#">Vechs</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker vintagebeef">
+          <a href="http://youtube.com/#">VintageBeef</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker w92baj">
+          <a href="http://youtube.com/#">W92Baj</a>
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker zisteau">
+          <a href="http://youtube.com/#">Zisteau</a>
         </div>
       </div>
     </div>
