Added Youtube Links

--- a/members.html
+++ b/members.html
@@ -38,82 +38,82 @@
       <h3>Mindcrack Server Members</h3>
       <div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker adlington">
-          <a href="http://youtube.com/#">Adlington</a>
+          <a href="http://youtube.com/adlingtont">Adlington</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker anderzel">
-          <a href="http://youtube.com/#">AnderZEL</a>
+        <a href="http://youtube.com/imanderzel">AnderZEL</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker arkas">
-          <a href="http://youtube.com/#">Arkas</a>
+          <a href="http://youtube.com/ArkasMc">Arkas</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker avidya">
-          <a href="http://youtube.com/#">Avidya</a>
+          <a href="http://youtube.com/user/AvidyaZen">Avidya</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker bdoubleo">
-          <a href="http://youtube.com/#">BdoubleO</a>
+          <a href="http://youtube.com/bdoubleo100">BdoubleO</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker blametc">
-          <a href="http://youtube.com/#">BlameTC</a>
+          <a href="http://youtube.com/BlameTheController">BlameTC</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker docm">
-          <a href="http://youtube.com/#">Docm</a>
+          <a href="http://youtube.com/docm77">Docm</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker etho">
-          <a href="http://youtube.com/#">Etho</a>
+          <a href="http://youtube.com/ethoslab">Etho</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker generikb">
-          <a href="http://youtube.com/#">GenerikB</a>
+          <a href="http://youtube.com/generikb">GenerikB</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker guude">
-          <a href="http://youtube.com/#">Guude</a>
+          <a href="http://youtube.com/guudeboulderfist">Guude</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker jsano">
-          <a href="http://youtube.com/#">Jsano</a>
+          <a href="http://youtube.com/jsano19">Jsano</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker kurt">
-          <a href="http://youtube.com/#">Kurt</a>
+          <a href="http://youtube.com/kurtjmac">Kurt</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker mcgamer">
-          <a href="http://youtube.com/#">MCGamer</a>
+          <a href="http://youtube.com/supermcgamer">MCGamer</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker mhykol">
-          <a href="http://youtube.com/#">Mhykol</a>
+          <a href="http://youtube.com/mhykol">Mhykol</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker millbee">
-          <a href="http://youtube.com/#">Millbee</a>
+          <a href="http://youtube.com/MillBeeful">Millbee</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker nebris">
-          <a href="http://youtube.com/#">Nebris</a>
+          <a href="http://youtube.com/nebris88">Nebris</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker pakratt">
-          <a href="http://youtube.com/#">Pakratt</a>
+          <a href="http://youtube.com/pakratt13">Pakratt</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker paulsjr">
-          <a href="http://youtube.com/#">PaulSJr</a>
+          <a href="http://youtube.com/paulsoaresjr">PaulSJr</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker pause">
-          <a href="http://youtube.com/#">Pause</a>
+          <a href="http://youtube.com/pauseunpause">Pause</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker pyrao">
-          <a href="http://youtube.com/#">Pyrao</a>
+          <a href="http://youtube.com/Pyropuncher">Pyrao</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker sethbling">
-          <a href="http://youtube.com/#">SethBling</a>
+          <a href="http://youtube.com/sethbling">SethBling</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker thejims">
-          <a href="http://youtube.com/#">TheJims</a>
+          <a href="http://youtube.com/thejims">TheJims</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker vechs">
-          <a href="http://youtube.com/#">Vechs</a>
+          <a href="http://youtube.com/Vechz">Vechs</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker vintagebeef">
-          <a href="http://youtube.com/#">VintageBeef</a>
+          <a href="http://youtube.com/vintagebeef">VintageBeef</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker w92baj">
-          <a href="http://youtube.com/#">W92Baj</a>
+          <a href="http://youtube.com/w92baj">W92Baj</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker zisteau">
-          <a href="http://youtube.com/#">Zisteau</a>
+          <a href="http://youtube.com/Zisteau">Zisteau</a>
         </div>
       </div>
     </div>
