Added "Join Server" Link

--- a/members.html
+++ b/members.html
@@ -27,6 +27,7 @@
             <li><a href="#">Chat</a></li>
             <li><a href="#">Map</a></li>
             <li><a href="#">Games</a></li> 
+            <li><a href="canijoinmindcrack.html">Join Server</a></li> 
           </ul>
         </div>
       </div>
@@ -41,7 +42,7 @@
           <a href="http://youtube.com/adlingtont">Adlington</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker anderzel">
-        <a href="http://youtube.com/imanderzel">AnderZEL</a>
+          <a href="http://youtube.com/imanderzel">AnderZEL</a>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 memberlist-mindcracker mindcracker arkas">
           <a href="http://youtube.com/ArkasMc">Arkas</a>
