--- a/canijoinmindcrack.html
+++ b/canijoinmindcrack.html
@@ -29,11 +29,12 @@
           </div>
           <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9">
             <ul class="nav">
-              <li><a href="#" class="current">Home</a></li>
-              <li><a href="#">Members</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="members.html">Members</a></li>
               <li><a href="#">Chat</a></li>
               <li><a href="#">Map</a></li>
               <li><a href="#">Games</a></li> 
+              <li><a href="canijoinmindcrack.html" class="current">Join Server</a></li>
             </ul>
           </div>
         </div>
