--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               <li><a href="#">Chat</a></li>
               <li><a href="#">Map</a></li>
               <li><a href="#">Games</a></li> 
+              <li><a href="canijoinmindcrack.html">Join Server</a></li> 
             </ul>
           </div>
         </div>
